--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "author": "Adriano Rosa",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "start": " ts-node-dev ./src/index.ts"
+  },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "http-status-codes": "^2.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
+    "@types/http-status-codes": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "eslint": "^8.52.0",
