--- a/package.json
+++ b/package.json
@@ -6,20 +6,26 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": " ts-node-dev ./src/index.ts"
+    "start": " ts-node-dev ./src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
+    "@types/jest": "^29.5.7",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
     "@types/http-status-codes": "^1.2.0",
+    "@types/supertest": "^2.0.15",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "eslint": "^8.52.0",
+    "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
